@@ -134,6 +134,10 @@ libglade.
 slightly more complicated than the Glade example editor application.
 </ul>
 
+<ul>
+<li><a href="http://sussen.sourceforge.net/">Sussen</a> -
+a security scanner for GNOME.
+</ul>
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
