@@ -166,6 +166,23 @@ Oct&nbsp;1&nbsp;2003
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Jul&nbsp;18&nbsp;2003
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>New Tutorial</B>
+<P>Ishan Chattopadhyaya has written a new tutorial,
+<a href="http://wingtk.sf.net/ishan/glade.html">"GTK+ programming
+with Glade"</a>. He's also compiled a
+<a href="http://prdownloads.sourceforge.net/wingtk/Glade_Documents.zip?download">ZIP archive</a> containing many of the tutorials available for Glade on
+the web</a>.
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 May&nbsp;30&nbsp;2003
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
