@@ -1,3 +1,9 @@
+2003-07-18  Damon Chaplin  <damon@gnome.org>
+
+	* apps.html: added Sussen.
+
+	* index.html: added line to new tutorial.
+
 2003-05-30  Damon Chaplin  <damon@gnome.org>
 
 	* index.html: added link to new Spanish guide to Glade.
